<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DiscAndCondition">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/nextdetail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="40dp"
            android:background="@color/light_color"
            android:text="@string/next"
            android:textColor="@android:color/white" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/dark_color"
                android:orientation="horizontal"
                android:paddingBottom="10dp"
                android:paddingTop="10dp">

                <ImageView
                    android:id="@+id/back"
                    android:layout_width="20dp"
                    android:layout_height="35dp"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/back" />

                <TextView
                    android:id="@+id/includeSomeDetail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="sans-serif-condensed"
                    android:text="@string/include_some_details"
                    android:textColor="@android:color/background_light"
                    android:textSize="25dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="30dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/condition"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/condition"
                    android:textColor="@color/dark_color"
                    android:textSize="14sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingBottom="20dp"
                    android:paddingEnd="20dp"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:paddingStart="20dp"
                    android:paddingTop="10dp">

                    <Button
                        android:id="@+id/newButton"
                        android:layout_width="124dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="40dp"
                        android:layout_weight="1"
                        android:background="@android:color/background_light"
                        android:text="NEW"
                        tools:ignore="ButtonStyle" />

                    <Button
                        android:id="@+id/usedButton"
                        android:layout_width="124dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@android:color/background_light"
                        android:text="@string/used" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Company*"
                        android:textColor="@color/dark_color"
                        android:textSize="14sp" />

                    <EditText
                        android:id="@+id/company"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="18dp"
                        android:clickable="true"
                        android:editable="false"
                        android:ems="10"
                        android:focusableInTouchMode="false"
                        android:hint="@string/company"
                        android:inputType="none"
                        android:focusable="true" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/descLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/descrip"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingStart="5dp"
                        android:text="@string/description"
                        android:textColor="#5a0c0c" />

                    <EditText
                        android:id="@+id/desDetail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="@string/description"
                        android:inputType="textPersonName" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/caution"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:textStyle="italic" />

                        <TextView
                            android:id="@+id/counting"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="40dp"
                            android:layout_weight="1" />
                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>
</RelativeLayout>